now llm is working

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,6 @@
 [pytest]
+timeout = 300
 addopts = --asyncio-mode=auto
+asyncio_default_fixture_loop_scope = function  # or class/module as needed
 filterwarnings =
     ignore::DeprecationWarning
-    
