gemini embedding with groq llm for faster inference

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,15 +7,13 @@ psycopg2-binary
 pymysql
 websockets 
 langchain
+langchain-community
 python-multipart
 pytest 
 httpx
 pytest-asyncio
 chromadb
-sentence-transformers
-huggingface-hub
-langchain-community
 pytest-timeout
-langchain_huggingface
-faiss-cpu
-langchain-ollama
+groq
+langchain-groq
+langchain_google_genai
